name:                ihaskell-diagrams
version:             0.2.0.0
synopsis:            IHaskell display instances for diagram types
description:         Instances to render and display diagrams to viewed in an
                     IHaskell notebook. Supports multiple backends by using 
                     flags. The default backend is diagrams-svg.
homepage:            http://www.github.com/diagrams/ihaskell-diagrams
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          diagrams-discuss@googlegroups.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.16

Flag svg
  Description: Enable SVG backend
  Default:     True
  Manual:      True

Flag rasterific
  Description: Enable Rasterific backend
  Default:     False
  Manual:      True

library
  exposed-modules:     IHaskell.Display.Diagrams
  build-depends:
    base         >= 4.6 && < 4.9,
    ihaskell     >= 0.6 && < 0.7,
    diagrams-lib >= 1.3 && < 1.4,
    bytestring

  if flag(svg)
      build-depends:
        diagrams-svg >= 1.3 && < 1.4,
        lucid-svg

      CPP-options: -DFSVG

  if flag(rasterific)
      build-depends: diagrams-rasterific >= 1.3 && < 1.4,
                     JuicyPixels
      CPP-options: -DFRASTERIFIC

  hs-source-dirs:      src
  default-language:    Haskell2010

